Use testcontainers for postgres testing (#1255)
Resolves #1200